# Gen-compare

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: convert.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  block_diff.rs  diff.rs  lib.rs  pair.rs  stats.rs  token.rs
crates/docx/: Cargo.toml
crates/docx/src/: lib.rs  read.rs  redline.rs
crates/gui/: Cargo.toml  Cargo.toml.add.txt  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/icons/: .gitkeep
crates/gui/src/: main.rs  word_com.rs
installer/: build.ps1  compare.iss
tools/icon-gen/: Cargo.toml
tools/icon-gen/src/: main.rs
