[package]
name = "compare-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "compare"
path = "src/main.rs"

[dependencies]
compare-core = { workspace = true }
compare-docx = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
