[package]
name = "compare-docx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
compare-core = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
