[package]
name = "compare-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "GenCompare"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
compare-core = { workspace = true }
compare-docx = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
lopdf = { workspace = true }
tempfile = "3"

windows = { version = "=0.52.0", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant"
] }